prevent horizontal scroll of main container with course contact overflow

--- a/src/static/css/base.css
+++ b/src/static/css/base.css
@@ -119,6 +119,7 @@ main {
 
 ::-webkit-scrollbar {
     width: 0.5rem;
+    height: 0;
 }
 ::-webkit-scrollbar-thumb{
     background: #A3D8E5;
